--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -69,7 +69,7 @@
             <a class="btn btn-gotopay" href="{% url 'orden' %}">Proceder al pago</a>
 
             <div class="continue-shopping">
-                <a href="{% url 'view_products' %}">Continuar comprando</a>
+                <a class="btn btn-continuar-compra" href="{% url 'view_products' %}">Continuar comprando</a>
             </div>
         {% endif %}
     </div>
