--- a/products/templates/list_products.html
+++ b/products/templates/list_products.html
@@ -73,7 +73,7 @@
                             <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
                             <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
                         </select>
-                        <button type="submit">Filtrar</button>
+                        <button class="btn" type="submit">Filtrar</button>
                     </form>
                 </div>
 
@@ -96,7 +96,7 @@
                             <label class="max-label" for="max-input">${{ current_max_price }}</label>
                             </div>
                         </div>
-                        <button type="submit">Filtrar</button>
+                        <button class="btn" type="submit">Filtrar</button>
                     </form>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                             </select>
                             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
                         </div>
-                        <button type="submit">Filtrar</button>
+                        <button class="btn" type="submit">Filtrar</button>
                     </form>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     </select>
                     <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
                 </div>
-                <button type="submit">Filtrar</button>
+                <button class="btn" type="submit">Filtrar</button>
             </form>
         </div>
 
@@ -241,7 +241,7 @@
                     </div>
                 </div>
 
-                <button type="submit">Filtrar</button>
+                <button class="btn" type="submit">Filtrar</button>
             </form>
         </div>
 
