--- a/profiles/static/css/changed_password.css
+++ b/profiles/static/css/changed_password.css
@@ -1,10 +1,10 @@
 :root {
-    --primary-color: #0dffd4;
+    --primary-color: #06B6D4;
     --background-color: #272840;
     --dark-background: #1e1f36;
     --text-color: #ffffff;
     --input-background: #3a3b58;
-    --button-hover: #0cbda0;
+    --button-hover: #06B6D4;
 }
 
 main {
@@ -33,13 +33,13 @@ input {
 }
 .form-group{
     background-color: #1E1F36;
-    border: 2px solid #17F0D2;
+    border: 2px solid #06B6D4;
     color: white;
     padding: 10px;
 }
 
 .profile-container {
-    background-color: var(--card-background);
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -47,7 +47,7 @@ input {
 }
 
 input:focus {
-    border-color: #17F0D2;
+    border-color: #06B6D4;
     box-shadow: 0 0 8px rgba(0, 188, 212, 0.5);
     outline: none; 
 }
@@ -71,24 +71,29 @@ input:focus {
 
 .btn {
     background-color: var(--primary-color);
-    color: #000;
+    color: #0f3460;
     border: none;
     padding: 0.8rem 1.5rem;
     font-size: 1rem;
     font-weight: 600;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.2s;
+    transition: all 0.3s ease;
 }
 
 .btn:hover {
-    background-color: var(--button-hover);
-    color: black !important;
+    background: #06B6D4 ;
+    transform: scale(1.05);
+    color: #0f3460 ;
 }
 
 .btn:active{
-    background-color: #0cbda0 !important;
-    color: black !important;
+    background: #06B6D4 ;
+    color: #0f3460 ;
+}
+.btn:focus{
+    background: #06B6D4 !important ;
+    color: #0f3460 !important;
 }
 
 .buttons {
@@ -100,7 +105,7 @@ input:focus {
 
 .buttons a {
     text-decoration: none;
-    color: black;
+    color: #0f3460;
 }
 
 @media screen and (max-width: 768px) {
