--- a/profiles/templates/changed_password.html
+++ b/profiles/templates/changed_password.html
@@ -5,7 +5,7 @@
 <main>
     <div class="profile-container">
         <div class="password-section">
-            <h2 style="font-size: 1.3rem; color: var(--primary-color); margin-bottom: 1rem;">Cambiar Contraseña</h2>
+            <h2 style="font-size: 1.3rem; color: white; margin-bottom: 1rem;">Cambiar Contraseña</h2>
             
             <form method="POST">
                 {% csrf_token %}
