--- a/profiles/templates/perfil.html
+++ b/profiles/templates/perfil.html
@@ -57,9 +57,9 @@
       </div>
     </div>
     <div class="buttons">
-        <a id="btn" class="btn btn-primary" href="{% url 'change_password' %}">Cambiar contraseña</a>
+        <a id="btn" class="btn" href="{% url 'change_password' %}">Cambiar contraseña</a>
         <br>
-        <a id="btn1" class="btn btn-primary" href="{% url 'edit_profile' %}">Editar perfil</a>
+        <a id="btn1" class="btn" href="{% url 'edit_profile' %}">Editar perfil</a>
     </div>
     
 </section>
