--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand mb-0 h1 fs-3" style="color: #D1A0FF;" href="{% url 'index' %}">Byte & Beat</a>
+                <a class="navbar-brand mb-0 h1 fs-3" style="color: #06B6D4;" href="{% url 'index' %}">Byte & Beat</a>
                 </div>
 
                 <div class="collapse navbar-collapse justify-content-center order-3 order-lg-2 fs-5" id="navbarNav">
@@ -169,7 +169,7 @@
     <!-- Columna 1: Información de la empresa -->
     <div class="footer-column">
         <div class="footer-logo">
-            <h3 style="color: #D1A0FF; margin: 0;">Byte & Beat</h3>
+            <h3 style="color: #06B6D4; margin: 0;">Byte & Beat</h3>
         </div>
         <div class="company-info">
             <p>Tienda especializada en productos tecnológicos de alta calidad para músicos y entusiastas de la tecnología.</p>
@@ -193,7 +193,7 @@
     <div class="footer-column">
         <h4>Ayuda</h4>
         <ul>
-            <li><a href="#">Formulario de contacto</a></li>
+            <li class="formulario-contact-footer"><a href="#">Formulario de contacto</a></li>
         </ul>
     </div>
 </div>
@@ -207,6 +207,21 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+<script>
+    
+  let ClickedA = false;
+
+  document.querySelectorAll('.btn').forEach(function (button) {
+    button.addEventListener('click', function (e) {
+        if (ClickedA) {
+            e.preventDefault();
+            return false;
+        }
+        ClickedA = true;
+    });
+});
+
+</script>
 </body>
 
 </html>
