--- a/orden/templates/breadcrumb.html
+++ b/orden/templates/breadcrumb.html
@@ -19,7 +19,7 @@
     }
   </style>
   
-  <div style="margin-top: 90px; margin-bottom: -50px; color: white; display: flex; justify-content: center;">
+  <div class="breadcrumb" style="margin-top: 90px; margin-bottom: -50px; color: white; display: flex; justify-content: center;">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         {% for item in breadcrumb %}
